[package]
name = "clip_core"
description = "Defines clip core traits"
authors = ["Claire Bts <claxxx.bts@gmail.com>"]
readme = "README.md"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
keywords = ["parsing"]
categories = ["command-line-interface", "parsing"]
repository = "https://github.com/ClaXXX/clip.git"


