[package]
name = "clip_derive"
description = "Provides helpers to derive clip_core traits"
readme = "README.md"
version = "0.2.0"
edition = "2021"
authors = ["Claire Bts <claxxx.bts@gmail.com>"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = { version = "2.0.60", features = ["full"] }

[dev-dependencies]
clip_core = { version = "0.2.0", path = "../clip_core/" }
